--- a/config-cloud/gateway-service.yaml
+++ b/config-cloud/gateway-service.yaml
@@ -17,11 +17,7 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: user-service
-          uri: lb://user-service
+        - id: process-service
+          uri: lb://process-service
           predicates:
-            - Path=/user/**
-        - id: car-service
-          uri: lb://car-service
-          predicates:
-            - Path=/car/**
+            - Path=/process/**
